--- a/.github/quartz/custom.scss
+++ b/.github/quartz/custom.scss
@@ -2,10 +2,10 @@
 @use "./base.scss";
 
 // put your custom CSS here!
-header {
-  background-image: url('assets/images/Cascade_STEAM_horizontal_logo_primary.svg'); /* Adjust the path as necessary */
-  background-size: cover; /* Ensures the image covers the entire header area */
-  background-position: center; /* Centers the image */
-  height: 200px; /* Adjust the height to your desired banner size */
-  /* Add other styling as needed, such as padding or text color adjustments */
-}
+// header {
+//   background-image: url('assets/images/Cascade_STEAM_horizontal_logo_primary.svg'); /* Adjust the path as necessary */
+//   background-size: cover; /* Ensures the image covers the entire header area */
+//   background-position: center; /* Centers the image */
+//   height: 200px; /* Adjust the height to your desired banner size */
+//   /* Add other styling as needed, such as padding or text color adjustments */
+// }
